[gd_scene load_steps=6 format=3 uid="uid://dox34o7y0r5ob"]

[ext_resource type="Script" path="res://Scenes/ClassButton.gd" id="1_hnmie"]
[ext_resource type="Theme" uid="uid://g5dcmi2kejgv" path="res://Assets/Themes/TestTheme.tres" id="1_td2vy"]
[ext_resource type="PackedScene" uid="uid://dovpmp4f4ubog" path="res://Scenes/animated_button.tscn" id="3_dicva"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7sieu"]
bg_color = Color(0.0470588, 0.207843, 0.415686, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bylmn"]
bg_color = Color(0.0235294, 0.137255, 0.286275, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ClassButton" type="Button" groups=["ClassButtons"]]
custom_minimum_size = Vector2(0, 200)
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_td2vy")
script = ExtResource("1_hnmie")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="UP" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_dicva")]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
theme = null
theme_override_styles/normal = SubResource("StyleBoxFlat_7sieu")
theme_override_styles/hover = SubResource("StyleBoxFlat_7sieu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bylmn")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7sieu")
theme_override_styles/focus = SubResource("StyleBoxFlat_7sieu")
color_theme = "Primary"
label_name = "^"

[node name="LevelButton" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_dicva")]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.63
mouse_filter = 0
theme = null
theme_override_styles/normal = SubResource("StyleBoxFlat_7sieu")
theme_override_styles/hover = SubResource("StyleBoxFlat_7sieu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bylmn")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7sieu")
theme_override_styles/focus = SubResource("StyleBoxFlat_7sieu")
color_theme = "Primary"
label_name = ""

[node name="DOWN" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_dicva")]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
theme = null
theme_override_styles/normal = SubResource("StyleBoxFlat_7sieu")
theme_override_styles/hover = SubResource("StyleBoxFlat_7sieu")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bylmn")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7sieu")
theme_override_styles/focus = SubResource("StyleBoxFlat_7sieu")
color_theme = "Primary"
label_name = "v"

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Class 1"

[node name="Delete" type="Button" parent="MarginContainer/HBoxContainer"]
self_modulate = Color(0.807843, 0.133333, 0.309804, 1)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "X"

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/UP" to="." method="_on_up_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/DOWN" to="." method="_on_down_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
